manifests/cluster-addons/registry/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: registry
  namespace: registry
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: tailscale-int
      namespace: tailscale

  hostnames:
    - pkg.int.bakseter.net

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ''
          kind: Service
          name: registry
          port: 5000
